[gd_scene load_steps=5 format=2]

[ext_resource path="res://sprites/platform_metroidvania asset pack v1.01/miscellaneous sprites/wooden_plate.png" type="Texture" id=1]
[ext_resource path="res://scripts/TextBoard.gd" type="Script" id=2]
[ext_resource path="res://fonts/16font.tres" type="DynamicFont" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[node name="TextBoard" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="UseLabel" type="RichTextLabel" parent="."]
margin_left = -3.0
margin_top = -21.0
margin_right = 3.0
margin_bottom = -7.0
custom_fonts/normal_font = ExtResource( 3 )
text = "E"
scroll_active = false
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="." to="." method="_on_TextBoard_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_TextBoard_body_exited"]
